--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Audio samples from "Time Domain Adversarial Voice Conversion for ADD 2022 Challenge"</h1>
       </header>
     </article>
-    <div><b>Paper: </b><a href="https://www.overleaf.com/project/61e4e2a3b87819c0047e450f">Overleaf</a></div>
+    <div><b>Paper: </b><a href="">Link</a></div>
     <div><b>Authors:</b> KeAI </div>
     <div><b>Abstract:</b> In this paper, we present a neutral network based adversarial method to generate deepfake audios to fool anti-spoofing systems built in various ways. Firstly, we build an any-to-many voice conversion (VC) system to convert source speech with arbitrary language content into target speaker’s fake speech. Then the converted speech generated from VC is post-processed in time-domain to improve the deception ability. The experimental results show that our system has adversarial ability against anti-spoofing detectors with a little compromise in audio quality and speaker similarity. This system ranks top in track 3.1 in the ADD 2022 challenge, showing that our method could also gain perfect generalization ability against different detectors.<br/><br/>
     </div>
